methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {avance(); var b = getCouleurSol();if (b==Color.green) {avance();}}
                                                                                            ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {avance(); var b = getCouleurSol();if (b==Color.green) {avance();}}
                                                                 ^